# mrcpp

api/: macros.h
cmake/compiler_flags/: CXXFlags.cmake
cmake/custom/: tests.cmake
src/: CMakeLists.txt
src/core/: CMakeLists.txt  tteigen.hpp  ttutils.hpp
src/treebuilders/: ConvolutionCalculator.cpp  DerivativeCalculator.cpp  ProjectionCalculator.cpp
src/trees/: BoundingBox.cpp  FunctionTree.cpp  MWNode.cpp  MWNode.h  MultiResolutionAnalysis.cpp
src/utils/: details.cpp  math_utils.cpp
tests/: CMakeLists.txt  unit_tests.cpp
tests/core/: CMakeLists.txt  gauss_quadrature.cpp  mw_filter.cpp  scaling_basis.cpp  tt_testing_utils.hpp  tteigen.cpp
tests/functions/: CMakeLists.txt  gaussians.cpp  legendre_poly.cpp  periodify_gaussians.cpp  polynomial.cpp
tests/operators/: CMakeLists.txt  derivative_operator.cpp  helmholtz_operator.cpp  identity_convolution.cpp  poisson_operator.cpp
tests/scalingfactor/: CMakeLists.txt  scaling_factor.cpp
tests/treebuilders/: CMakeLists.txt  addition.cpp  build_grid.cpp  clear_grid.cpp  map.cpp  multiplication.cpp  projection.cpp
tests/trees/: CMakeLists.txt  band_width.cpp  bounding_box.cpp  function_tree.cpp  mw_tree.cpp  node_box.cpp  node_index.cpp  tree_io.cpp
